Mejoré producto-html

--- a/producto.html
+++ b/producto.html
@@ -32,14 +32,14 @@
             <div class="contenido">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore voluptates optio eum, possimus recusandae, veritatis laboriosam eius, quisquam quis consequuntur a officiis saepe expedita? Nostrum, amet. Quasi, suscipit ipsa! Illo.  ugit laboruint.</p>
                 <form class="fomrulario-pedido">
-                <select class="talla campo">
-                    <option value="C">Chica</option>
-                    <option value="M">Mediana</option>
-                    <option value="G">Grande</option>
-                </select>
-                <input type="number" min="1" class="cantidad campo">
-                <input type="submit" value="AGREGAR AL CARRITO" class="boton">
-            </form>
+                    <select class="talla campo">
+                        <option value="C">Chica</option>
+                        <option value="M">Mediana</option>
+                        <option value="G">Grande</option>
+                    </select>
+                    <input type="number" min="1" class="cantidad campo" placeholder="cantidad">
+                    <input type="submit" value="AGREGAR AL CARRITO" class="boton">
+                </form>
             
             </div>
 
